--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "description": "bluz web push module",
   "require": {
+    "bluzphp/framework": "~7.10",
     "bluzphp/composer-plugin": "~2.1",
     "minishlink/web-push": "^4.0"
   }
